# bachelors-thesis

./: LICENSE  README.md
baseline/data_extraction/day_ahead/: evaluate.py  payload.json  payload.md  run.py
baseline/data_extraction/electricity_meter/: benchmarks.md
baseline/data_extraction/electricity_meter/gridvis/: .gitignore  LICENSE  README.md  pyproject.toml
baseline/data_extraction/electricity_meter/gridvis/src/gridvis/: __init__.py  enums.py  gridvis.py  gridvis_old.py  values.json
baseline/data_extraction/electricity_meter/gridvis/src/gridvis/res/: certs.pem  gridvis_cert.pem
baseline/data_extraction/electricity_meter/gridvis/tests/: run.py
baseline/data_transformation/aggregations/: run.py
baseline/data_transformation/disaggregation/: plants_main_data_query.sql  run.py
baseline/data_transformation/negative_hours_energy/: nh.csv  plants_main_data.csv  run.py
baseline/fileio/: plot.py  read.py  run.py
baseline/fileio/metrics/: extrapolation_read.csv  extrapolation_write.csv  metrics_read.csv  metrics_write.csv
baseline/fileio/stats/: stats_day.csv  stats_hour.csv  stats_month.csv  stats_quarter-hour.csv  stats_year.csv
baseline/plot/: aggregations.py  runtime_improvements.py  system_improvements.py
bedrock/: auth.py  ble.py  cache.py  fabric.py  ingress.py  ingress_auctions.py  ingress_janitza.py  ingress_negative_hours.py  janitza_energy_aggregations.py  jhe.py  main.py  market_price_data.py  mastr.py  plant_energy_aggregations.py  serializer.py  settings.py  tasks.py
bedrock/routers/: ble.py  fabric.py  jhe.py  public.py  util.py
(+168 files in other folders)
